k3s/manifests/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
